project("Live")
aux_source_directory(. LIVE)
foreach(T_FILE_NAME ${LIVE})
    string(REGEX REPLACE ".cpp" "" EXECUTABLE_NAME ${T_FILE_NAME})
    string(REGEX REPLACE "\.\/" "" EXECUTABLE_NAME ${EXECUTABLE_NAME})
    add_executable(${EXECUTABLE_NAME} ${T_FILE_NAME})
    target_link_libraries(${EXECUTABLE_NAME} gtest_main gmock_main)
    add_test(test_all ${EXECUTABLE_NAME})
endforeach()